feat(transport): 接收取消货架结果
